# alkebulan-backend

./: -H  .dockerignore  .gitignore  .gitkeep  Dockerfile  Ingest.ipynb  Pipfile  app.db  app.py  db.sqlite  docker-compose.yml  environment.py  main.py  prompt.py  pyproject.toml  requirements.txt  tabular_data_workflow.py  unstructured_file_processor.py
.github/workflows/: deploy-staging.yml  lint-and-format.yml
app/: config.py  database.py  dependencies.py  environment.py  main.py
app/chat/: config.py  router.py  utils.py
app/docs/: ws-docs.html
app/ingest/: config.py  dependencies.py  models.py  router.py  utils.py
app/rag/: config.py  crud.py  dependencies.py  models.py  router.py  utils.py
app/routers/: rag.py
app/tests/: chat-open-searcher.html  chat-similarity-searcher.html
app/users/: config.py  crud.py  dependencies.py  models.py  router.py  schemas.py  utils.py
chat_service/: Dockerfile  pyproject.toml
chat_service/app/: config.py  main.py  utils.py
data/: 1960-1980 Lending Rate.csv  DMB Loans & Advance.csv  Data Set for 1960 to 2023 (2).xlsx  Data Set for 1960 to 2023.xlsx.json  SFRCB 1981-2022.csv
datasets/: 1980 - 2022 Lending Rate.csv  MMIR 1981-2022.csv  QMA 1960-1980.csv  QMA 1981-2022.csv  SFRCB 1960 - 1980.csv
preprocessor/: process.py  store.py
preprocessor_service/: process.py  store.py
rag_service/: app.py  config.py  utils.py
src/: config.py  main.py
src/context/: query_engine.py
src/rag/: router.py
src/rag/handlers/: file_readers.py  file_uploaders.py  similarity_searcher.py  unstructured_file_processor.py  workflow.py
src/rag/utils/: file_readers.py  file_uploaders.py  unstructured_file_processor.py  workflow.py
src/utils/: query_engine.py  similarity_searcher.py
streamlit_prototype/: app.py
streamlit_prototype/utils/: file_readers.py  file_uploaders.py  unstructured_file_processor.py  workflow.py
tests/: chat-open-search-langchain.html  chat-open-search.html  chat-qdrant.html  chat-rag-chain.html  chat-similarity-searcher.html  curl.txt  ingest-files.html  rag-open-search-langchain.html  rag-open-search.html  rag-qdrant.html  test_aws_opensearch.py
unstructured/: Data Set for 1960 to 2023.xlsx
upload/: Data Set for 1960 to 2023 (2).xlsx.json  MMIR 1960 - 1980.csv
user_service/: Dockerfile  pyproject.toml
user_service/app/: config.py  database.py  main.py  utils.py
utils/: file_readers.py  file_uploaders.py  unstructured_file_processor.py  workflow.py
